서브메뉴 내용수정했습니다. 박민정

--- a/justMall/css/style.css
+++ b/justMall/css/style.css
@@ -58,7 +58,15 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 5px;
+    z-index:3;
+    transform:scaleY(0);
+    transition: transform 500ms;
 }
+.subnavi .submenu{
+    transform:scaleY(1);
+}
+
+
 .submenu{
     display: flex;
     flex-direction: column;
