메뉴바 부분수정-태현

--- a/justMall/css/style.css
+++ b/justMall/css/style.css
@@ -21,6 +21,7 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 }
 
 .menubar{
@@ -48,24 +49,32 @@ header {
     height: 40px;
 }
 /* navigation */
-/* nav{
-    display: none;
-} */
+nav{
+    position: absolute;
+    background-color: #ededed;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: 52%;
+    top: 100px;
+    right: 0;
+    z-index: 2;
+    transform:scaleY(0);
+    transition: transform 500ms ease;
+}
 .subnavi{
     float: right;
     height: 300px;
-    width: 52%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 5px;
-    z-index:3;
-    transform:scaleY(0);
-    transition: transform 500ms;
+    
 }
-.subnavi .submenu{
+.menubar:hover nav:hover{
     transform:scaleY(1);
+    transition: transform 500ms ease;
 }
-
 
 .submenu{
     display: flex;
@@ -73,11 +82,12 @@ header {
     align-items: center;
 }
 .submenu h2{
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 700;
 }
 .submenu a{
     font-size: 20px;
+    font-weight: 600;
     text-decoration: none;
     color: #222328;
     margin-top: 10px;
