--- a/justMall/css/style.css
+++ b/justMall/css/style.css
@@ -60,6 +60,7 @@ nav{
     right: 0;
     z-index: 2;
     transform:scaleY(0);
+    transform-origin: top;
     transition: transform 500ms ease;
 }
 .subnavi{
@@ -71,7 +72,7 @@ nav{
     padding: 5px;
     
 }
-.menubar:hover nav:hover{
+.menubar:hover nav{
     transform:scaleY(1);
     transition: transform 500ms ease;
 }
